--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav class="header__nav">
         <div class="header__logo">
-          <h4>sushiman</h4>
+          <h4>sushistore</h4>
           <div class="header__logo-overlay"></div>
         </div>
         <ul class="header__menu">
@@ -75,10 +75,42 @@
           </div>
 
           <div class="hero-content__review">
-            <img src="assets/user.png" alt="user"/>
-            <p>"This is the best Japanese food delivery service that ever existed."</p>
+            <img src="assets/user.png" alt="user" />
+            <p>
+              "This is the best Japanese food delivery service that ever
+              existed."
+            </p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="about-us" id="about-us">
+      <div class="about-us__image">
+        <div class="about-us__image-sushi3">
+          <img src="assets/sushi-3.png" alt="sushi" />
+        </div>
+
+        <button class="about-us__button">
+          Learn More
+          <img src="assets/arrow-up-right.svg" alt="learn more" />
+        </button>
+
+        <div class="about-us__image-sushi2">
+          <img src="assets/sushi-2.png" alt="sushi" />
+        </div>
+      </div>
+
+      <div class="about-us__content">
+        <p class="sushi__subtitle">About Us / 私たちに関しては</p>
+        <h3 class="sushi__title">
+          Our mission is to bring true Japanese flavours to you.
+        </h3>
+        <p class="sushi__description">
+          We will continue to provide the experience of Omotenashi, the Japanese
+          mindset of hospitality, with our shopping and dining for our
+          customers.
+        </p>
       </div>
     </section>
 
